--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
       </p>
       
       <p class="paragraph-opacity p-gray-opacity">
-        “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-        professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-        student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-        did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-        project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-        could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-        experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
+        “ Before joining the bootcamp, I’ve <br>never written a line of code. I needed <br> some structure from 
+        professionals <br>who can help me learn programming <br> step by  step. I was encouraged to <br> enroll by a former 
+        student of theirs <br>who can only say wonderful <br>things about the program. The entire <br>curriculum and staff 
+        did not <br>disappoint. They were very hands-on <br>and I never had to wait long for <br>assistance. The agile team 
+        project, in <br>particular, was outstanding. It took <br> my learning to the next level in a way <br> that no tutorial 
+        could ever have. In <br> fact, I’ve often referred to it during <br> interviews as an example of my <br> developent 
+        experience. It certainly <br> helped me land a job as a full-stack <br> developer afterreceiving multiple  <br>offers. 
         100% recommend! ”
         
       </p>
